apps/synapse-portal-framework/src/style/components/_NFBrowseToolsPage.scss
.browse-tools-page {
  // main contain has a padding bottom. Negative margin-bottom to connect last section to footer.
  margin-bottom: -60px;
  .home-container-description {
    padding: 0px 0px 60px 0px;
    margin: 0px;
  }

  .header {
    background: var(--synapse-primary-action-color);
    color: white;
    padding: 50px 0px 30px 0px;
  }
  .sectionTitle {
    padding: 50px 0px 15px 0px;
    text-align: center;
  }
  .sectionSubtitle {
    margin: 10px 0px 25px 0px;
    text-align: center;
  }
  .searchToolsRow {
    margin-top: 20px;
    display: grid;
    max-width: 750px;
    width: 100%;
    margin: 0px 5px 0px 10px;
    & .Mui-focused {
      outline-color: var(--synapse-primary-action-color);
    }
    input {
      height: 41px;
    }
    .search-button-container {
      place-self: center;
    }
  }
  .PopularSearches {
    display: flex;
    justify-content: space-between;
    margin: 20px 0px 20px 0px;
    width: 800px;
  }
  .description {
    max-width: 750px;
  }
  .categories {
    display: flex;
    @media (min-width: 1350px) {
      justify-content: space-between;
      margin-top: 30px;
    }
    @media (max-width: 1349px) {
      justify-content: center;
      flex-wrap: wrap;
    }
    p {
      color: #fff !important;
      border-bottom: 1px transparent;
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
      font-size: 18px;
      white-space: nowrap;
    }
  }
  .highlightSubmitToolContainer {
    background-color: #003a55;
    color: white;
    padding: 50px 0px 100px 0px;
  }

  .highlightSubmitToolButton {
    // TODO: Use theme to provide this color and hover state, see PORTALS-2653
    background-color: #e27134;
    color: white;
    &:hover {
      background-color: #dc6525;
    }
  }
  .Ecosystem {
    padding-bottom: 0px;
  }
}

.submit-tools-page {
  .submit-category-group {
    margin-top: 40px;
    &:first-child {
      margin-top: 60px;
    }
  }
  .submit-group-label {
    border-bottom: 2px solid #e0e6ee;
    padding-bottom: 14px;
    margin-bottom: 0;
    text-align: left;
  }
  .submit-not-sure {
    margin-top: 40px;
    padding-bottom: 20px;
  }
}

